--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,5 +14,5 @@
     <input type="text" placeholder="Search here" #searchTerm>
     <button (click)=openHdl(searchTerm.value)>Search</button>
 </div>
-<a routerLink="carts">Carts<span class="badge badge-warning">{{cart_count}}</span></a>
+<a routerLink="/carts">Carts<span class="badge badge-warning">{{cart_count}}</span></a>
 </nav>
