--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,13 +1,43 @@
-<form class="card">
-    <div class="card-body">
-    <input type="text" placeholder="Firstname" class="form-control">
-    <input type="text" placeholder="Lastname" class="form-control">
-    <input type="text" placeholder="Email" class="form-control">
-    <input type="text" placeholder="Username" class="form-control">
-    <input type="password" placeholder="password" class="form-control">
-    <input type="text" placeholder="DOB" class="form-control">
-    <div class="wr">
-    <button class="btn btn-sm btn-success" (click)=registerUser()>Register</button>
+<div class="login-wr">
+    <div class="login-frm">
+        <label class="sign-up-label">Sign In</label>
+        <div class="inp-wr">
+<i class="fa fa-envelope"></i>
+        <input class="inp" type="text" placeholder="Username">
+    </div>
+ 
+        <div class="inp-wr">
+        <i class="fa fa-lock"></i>
+        <input class="inp" type="password" placeholder="Password">
+        </div>
+        <button class="btn-sign-up">Sign In</button>
+        <label class="lbl2">Or Sign  up with another platform</label>
+        <div class="social-sign-methods">
+            <div class="circle">
+                <i class="fa fa-facebook"></i>
+            </div>
+            <div class="circle">
+                <i class="fa fa-twitter"></i>
+            </div>
+            <div class="circle">
+                <i class="fa fa-google"></i>
+            </div>
+            <div class="circle">
+                <i class="fa fa-linkedin"></i>
+            </div>
+        </div>
+    </div>
+<div class="login-bg">
+    <div class="clip-text">
+        <h3>One of us?</h3>
+        <p>Lorem ipsum dolor sit amet dllkloi consetur adiicing elit. Voluptate ex expedita iusto!</p>
+   <button class="btn-sign-in">Sign In</button>
+    </div>
+    <div class="login-img">
+        <img src="/assets/images/rocket.png">
+        <div class="clip-bg">
+          
+        </div>
+    </div>
 </div>
 </div>
-</form>
