--- a/src/app/carts/carts.component.css
+++ b/src/app/carts/carts.component.css
@@ -119,3 +119,75 @@ margin:10px 10px;
         font-size: 12px;
     }
 }
+
+@media (max-width:567px){
+    table{
+        width: 100vw;
+    }
+    thead {
+        display: none;
+    }
+   tbody tr{
+       border-bottom:1px dashed #bebeb3;
+   }
+    tbody tr td{
+        text-align: end;
+        border-top:none;
+        padding-left: 30%;
+    }
+    tbody tr td::before{
+        content: attr(data-label);
+        position: relative;
+        width: 40%;
+        display: flex;
+        align-items: center;
+        left:0;text-align: left;
+font-size: 18px;
+font-weight: 500;
+        font-style: italic;
+        font-family: cursive;
+    }
+    tr.cua .ept{
+display: none;
+    }
+    #image ,#name,#price,#qty,#tc{
+        width: auto;
+        text-align: right;
+        margin:0;
+        padding:5px;
+        white-space: nowrap;
+        padding-right: 15px;
+        padding-left: 15px;
+        display: flex;
+        
+    justify-content: space-between;
+    } 
+    tbody tr:last-child{
+        border-bottom:none;
+    }
+    td#name{
+        font-style: italic;
+        font-family: cursive;
+        text-transform: capitalize;
+    }
+    td#price{
+        font-style: italic;
+        font-weight: 500;
+        font-size: 16px;
+    }
+    td#po{
+        text-align: right;
+        padding:5px;
+        padding-right: 15px;
+    }
+    td#tc{
+        font-weight: bold;
+    }
+  #name p{
+      margin-bottom: 0;
+  }
+    tbody tr td{
+        display: block;
+        width: 100%;
+    }
+}
