--- a/src/app/carts/carts.component.html
+++ b/src/app/carts/carts.component.html
@@ -14,17 +14,21 @@
     </thead>
     <tbody>
 <tr *ngFor="let cart of carts">
-    <td id="image"><img src="{{cart.image}}"></td>
-    <td id="name"><p>{{cart.name}}</p></td>
-    <td id="price">${{cart.price}}</td>
-    <td id="qty"><span id="decr" (click)="decrement(cart)">-</span>{{cart.qty}}<spna id="incr" (click)="increment(cart)">+</spna></td>
-    <td id="tc">${{cart.price*cart.qty}}</td>
+    <td data-label="product image" id="image"><img src="{{cart.image}}"></td>
+    <td data-label="product name" id="name"><p>{{cart.name}}</p></td>
+    <td data-label="product price" id="price">${{cart.price}}</td>
+    <td data-label="product qty" id="qty">
+        <div class="qt-wr">
+        <span id="decr" (click)="decrement(cart)">-</span>{{cart.qty}}<span id="incr" (click)="increment(cart)">+</span>
+        </div>
+    </td>
+            <td data-label="total cost" id="tc">${{cart.price*cart.qty}}</td>
 
 </tr>
-<tr><td></td><td></td><td></td>
+<tr class="cua"><td class="ept"></td><td class="ept"></td><td class="ept"></td>
     <td id="po">total amount to pay</td>
 <td id="po">${{total_cost|number:'1.2-2'}}</td></tr>
 
-<tr><td></td><td></td><td></td><td></td><td><button id="place" class="btn btn-sm btn-success" (click)="fun()" routerLink="../placeorder">place order</button></td></tr>
+<tr class="cua"><td class="ept"></td><td class="ept"></td><td class="ept"></td><td class="ept"></td><td><button id="place" class="btn btn-sm btn-success" (click)="fun()" routerLink="../placeorder">place order</button></td></tr>
     </tbody>
 </table>
