--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<app-header></app-header>
+<div class="container-fluid">
 <div class="row">
     <div class="col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let product of products|search:searchTerm">
         <app-product [product]="product" (eventEmitter)="addToCart($event)"></app-product>
     </div>
-
 </div>
 </div>
