--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,58 +1,79 @@
 .product span{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: bold;
+    text-transform: capitalize;
     text-align: center;
     display: inline-block;
-    width: 280px;
+ color:#fff;
     margin-top: 15px;
     margin-bottom: 15px;
 }
 .product{
-    width: 100%;
-    margin:10px;
-    display:flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border:1px solid gray;
-    padding:10px;
-    margin:10px 10px;
 }
-.product:hover{
-    background:gainsboro;
-}
+
 .product img{
     width: 100%;
     height: 200px;
 }
-.product button{
-    background:#fff;
-    border: 2px solid rgb(20, 20, 28);
-    color:rgb(20, 20, 28);
-    border-radius: 4px;
+.product button.add-to-cart-btn{
+    background: transparent;
+    border: 2px solid #fff;
+    color: #fff;
+    padding-left: 15px;
+    outline: none;
+    height: 45px;   
+    font-weight: bold;
+    font-size: 16px;
+    border-top-color: #fff;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
 .product button:hover{
-    background:rgb(20, 20, 28);
-    color:#fff;
+    background:rgb(44,77,94);
 }
+
+.btns{
+    display: flex;
+}
+.detail-btn{
+    background: transparent;
+    border: 2px solid #fff;
+    color: #fff;
+    padding-left: 5px;
+    padding-right: 15px;
+    height: 45px;
+    outline: none;
+    margin-left: 10px;
+    font-weight: bold;
+    font-size: 16px;
+    border-top-color: #fff;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;   
+}
+
 .product p{
     margin:10px 0;
+    color:#fff;
+    font-weight: bold;
 }
 @media(max-width:575px){
     .product{
-        width: 75%;
-        margin:10px;
-        display:flex;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        border:1px solid gray;
-        padding:10px;
-        margin-left: 30px;
+        border: none;
     }
     .product img{
-        width: 75%;
-        height: 200px;
-        margin-left: 30px;
+        width: 100%;
+        height: auto;
+        height: 300px;
+        margin-left: 0;
     }
 }
