filter by price added

--- a/src/app/carts/carts.component.html
+++ b/src/app/carts/carts.component.html
@@ -29,6 +29,6 @@
     <td id="po">total amount to pay</td>
 <td id="po">${{total_cost|number:'1.2-2'}}</td></tr>
 
-<tr class="cua"><td class="ept"></td><td class="ept"></td><td class="ept"></td><td class="ept"></td><td><button id="place" class="btn btn-sm btn-success" (click)="fun()" routerLink="../placeorder">place order</button></td></tr>
+<tr class="cua"><td class="ept"></td><td class="ept"></td><td class="ept"></td><td class="ept"></td><td><button id="place" class="btn btn-sm btn-success" routerLink="../placeorder">place order</button></td></tr>
     </tbody>
 </table>
