--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -11,12 +11,30 @@
     font-size: 30px;
     font-weight: bold;
 }
+input[type="checkbox"]{
+    width: 20px!important;
+    display: inline-block!important;
+}
+.filter1 label{
+    font-size: 16px!important;
+    font-weight: bold!important;
+    margin-left: 5px;
+}
+.btn-primary{
+    background:rgb(30,61,90)!important;
+}
 .bg-dark .search-wrapper{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-left: 100px;
+}
+a.filter{
+    cursor: pointer;
+}
+a.filter img{
+width: 32px;
 }
 .bg-dark .search-wrapper input{
     font-size: 15px;
