--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,4 +15,37 @@
     <button (click)=openHdl(searchTerm.value)>Search</button>
 </div>
 <a routerLink="/carts">Carts<span class="badge badge-warning">{{cart_count}}</span></a>
+<!--below we click to open modal -->
+<a class="filter" data-toggle="modal" data-target="#exampleModal"><img src="/assets/images/filter.png"></a>  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Product Filter</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+         <div class="filter1">  
+             <input id="filt1" type="checkbox" #filter class="form-check" name="filter" (click)="filterOne(filter)">
+             <label for="filt1">Below $100</label>
+         </div>
+         <div class="filter1">
+            <input id="filt2" type="checkbox" #filter2 class="form-check" name="filter" (click)="filterOne(filter2)">
+            <label for="filt2">Between $100-$200</label>
+        </div>
+        <div class="filter1">
+            <input id="filt3" type="checkbox" #filter3 class="form-check" name="filter" (click)="filterOne(filter3)">
+            <label for="filt3">Above $200</label>
+        </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" (click)="closeFilter()" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+          <button type="button" (click)="applyFilter()" data-dismiss="modal" class="btn btn-primary">Apply Filter</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </nav>
