--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="container-fluid">
 <div class="row">
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let product of products|search:searchTerm">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let product of products|filterByPrice:filterOption |search:searchTerm">
         <app-product [product]="product" (eventEmitter)="addToCart($event)"></app-product>
     </div>
 </div>
