--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -20,6 +20,19 @@ input[type="checkbox"]{
     font-weight: bold!important;
     margin-left: 5px;
 }
+.user-wr{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   align-self: flex-end;
+   margin-left: 30px;
+}
+.user-wr img{
+    width: 100%;
+    border-radius: 50%;
+}
 .btn-primary{
     background:rgb(30,61,90)!important;
 }
