--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -48,4 +48,7 @@
       </div>
     </div>
   </div>
+  <div class="user-wr" routerLink='/profile'>
+    <img [src]="profileImage">
+  </div>
 </nav>
