--- a/src/app/register2/register2.component.css
+++ b/src/app/register2/register2.component.css
@@ -20,7 +20,7 @@
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
-.check-wr span{
+.check-wr label{
     font-size: 14px;
     font-weight: bold;
 }
@@ -54,19 +54,22 @@ box-shadow: 0px 4px 4px 3px rgb(210, 210, 210);
 }
 .register-wr .register-frm .inp-wr i{
     margin-right: 15px;
-    color:rgb(165,72,221)
+    color: rgb(30,61,90)
 }
 .register-wr .register-frm h2{
-    color:rgb(113,47,173);
+    color:rgb(30,61,90);
     font-size: 24px;
     margin-bottom: 30px;
     font-weight: bold;
 
 }
+.create-ac button:disabled{
+    background: #ddd !important;
+}
 .register-wr .register-info{
     width: 40%;
     height: auto;
-    background:linear-gradient(to bottom,rgb(176,16,238) 0%,rgb(220,54,250) 51%,rgb(231,68,247) 100%);
+    background:linear-gradient(to bottom,rgb(30,61,90) 0%,rgb(51, 105, 156) 51%,rgb(54, 115, 173) 100%);
     border-radius: 20px;
     padding-left: 30px;
     padding-right: 30px;
@@ -86,7 +89,7 @@ box-shadow: 0px 4px 4px 3px rgb(210, 210, 210);
  padding:0 60px;
     text-transform: uppercase;
     border-radius: 30px;
-    background:rgb(170,24,244);
+    background:rgb(30,61,90);
 }
 .reg-ii h3{
     color:#fff;
@@ -95,7 +98,7 @@ box-shadow: 0px 4px 4px 3px rgb(210, 210, 210);
 }
 .reg-ii p{
     color:#ddd;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 700;
 }
 .reg-ii button{
