--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -2,7 +2,7 @@
 <div class="iol">
     <div class="pro-card">
     <div>
-<img src="{{product.image}}">
+<img [src]="product.image">
 </div>
 <div class="pii">
 <span id="na">{{product.name}}</span>
