--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -20,6 +20,18 @@
         <small *ngIf="price.errors.required">Product Price is required</small>
         <small *ngIf="price.errors.pattern">Product Price must have > 0</small>
             </div>
+            <div class="form-group">
+                <label>Choose Product Category</label>
+            <select class="custom-select" name="category" required ngModel #cate="ngModel">
+               <option value="">Select Product Category</option>
+                <option value="electronics">Electronics</option>
+                <option value="mens">Mens</option>
+                <option value="womens">Womens</option>
+            </select>
+        </div>
+        <div class="alert alert-danger" *ngIf="cate.touched&&!cate.valid">
+            <small *ngIf="cate.errors.required">Product Category is required</small>
+                </div>
     <div class="form-group">
         <label>Product Description</label>
         <textarea class="form-control" name="des" required minlength="10" ngModel #des="ngModel">
